src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwP0.25-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1256 × 696, bounds: 800 × 600, states: []

post-map configures:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
